--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
     <header>
         <nav>
-
-
+            <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Search</a></li>
+            </ul>
         </nav>
     </header>
 
