--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <link type="text/css" rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script type="module" src="./js/index.js"></script>
     <script type="module" src="./js/api.js"></script>
     <title>PokemonWeb</title>
@@ -17,6 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Search</a></li>
             </ul>
+            <h1>PokemonWeb</h1>
         </nav>
     </header>
 
