Start with pokefact and find a pokemon

--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/search.js"></script>
     <title>PokemonWeb</title>
     <script> </script>
 </head>
@@ -21,8 +21,6 @@
             <h1>PokemonWeb</h1>
         </nav>
     </header>
-
-    <div id="pokemon-container"></div>
     
 </body>
 </html>
