--- a/facts.html
+++ b/facts.html
@@ -7,7 +7,7 @@
         <link type="text/css" rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
         <script type="module" src="./js/facts.js"></script>
-        <title>PokemonWeb</title>
+        <title>PokemonWeb | PokeFact</title>
         <script> </script>
     </head>
     <body>
@@ -15,7 +15,7 @@
             <nav>
                 <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="facts.html">PokeFact</a></li>
+                    <li><a href="facts.html" class="li-current">PokeFact</a></li>
                     <li><a href="search.html">Find a pokemon</a></li>
                 </ul>
                 <h1>PokemonWeb</h1>
@@ -27,6 +27,10 @@
             <div id="types-container"></div>
         </div>
         
+        <footer>
+            <p>Created by <a href=#>Nicolina Smith</a></p>
+            <p>Pokemon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
+        </footer>
     </body>
     </html>
     
