--- a/facts.html
+++ b/facts.html
@@ -21,11 +21,20 @@
                 <h1>PokemonWeb</h1>
             </nav>
         </header>
+
+        <main id="pokemon-fact">
     
-        <div id="types">
-            <h2>Pokemon types</h2>
-            <div id="types-container"></div>
-        </div>
+            <div id="types">
+                <h2>Pokemon types</h2>
+                <div id="types-container"></div>
+            </div>
+
+            <div id="encounters">
+                <h2>Encounters</h2>
+                <div id="encounters-container"></div>
+            </div>
+
+        </main>
         
         <footer>
             <p>Created by <a href=#>Nicolina Smith</a></p>
