--- a/search.html
+++ b/search.html
@@ -22,6 +22,18 @@
         </nav>
     </header>
 
+    <main>
+        <div class="search-container frame">
+            <div id="search">
+                <h2>Search for a pokemon</h2>
+                <form id="search-form">
+                    <input type="text" id="search-input" placeholder="Enter a pokemon name">
+                    <button type="submit" id="search-button">Search</button>
+                </form>
+            </div>
+        </div>
+    </main>
+
     <footer>
         <p>Created by <a href=#>Nicolina Smith</a></p>
         <p>Pokemon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
