--- a/facts.html
+++ b/facts.html
@@ -29,23 +29,24 @@
                 <div id="random-fact">
                     <h2>Did you know?</h2>
                     <div id="random-fact-container">
-                        <i class="fa-solid fa-chevron-left" id="paging-back"></i>
+                        <i class="fa-solid fa-chevron-left" id="paging-fact-back"></i>
                         <div id="fact-container"></div>
-                        <i class="fa-solid fa-chevron-right" id="paging-forward"></i>
+                        <i class="fa-solid fa-chevron-right" id="paging-fact-forward"></i>
                     </div>
+                    <i id="number-of-facts"></i>
                 </div>
             </div>
     
             <div class="frame">
+                <h2>Pokemon types</h2>
                 <div id="types">
-                    <h2>Pokemon types</h2>
                     <div id="types-container"></div>
                 </div>
             </div>
 
             <div class="frame">
+                <h2>Encounters</h2>
                 <div id="encounters">
-                    <h2>Encounters</h2>
                     <div id="encounters-container"></div>
                 </div>
             </div>
