--- a/search.html
+++ b/search.html
@@ -27,7 +27,7 @@
             <div id="search">
                 <h2>Search for a pokemon</h2>
                 <form id="search-form">
-                    <input type="text" id="search-input" placeholder="Enter a pokemon name">
+                    <input type="text" id="search-input" placeholder="Enter a pokemon name or id">
                     <button type="submit" id="search-button">Search</button>
                 </form>
             </div>
