--- a/search.html
+++ b/search.html
@@ -26,12 +26,13 @@
         <div class="search-container frame">
             <div id="search">
                 <h2>Search for a pokemon</h2>
-                <form id="search-form">
                     <input type="text" id="search-input" placeholder="Enter a pokemon name or id">
-                    <button type="submit" id="search-button">Search</button>
-                </form>
+                    <button id="search-button">Search</button>
+                <div id="search-result-container">
+                    <p id="search-comment"></p>
+                    <div id="search-result"></div>
+                </div>
             </div>
-        </div>
     </main>
 
     <footer>
