--- a/details.html
+++ b/details.html
@@ -15,7 +15,7 @@
         <nav>
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="facts.html">PokeFact</a></li>
+                <li><a href="facts.html">PokéFact</a></li>
                 <li><a href="search.html">Find a pokemon</a></li>
             </ul>
             <h1>PokemonWeb</h1>
