--- a/facts.html
+++ b/facts.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="facts.html" class="li-current">PokeFact</a></li>
+                    <li><a href="facts.html" class="li-current">PokéFact</a></li>
                     <li><a href="search.html">Find a pokemon</a></li>
                 </ul>
                 <h1>PokemonWeb</h1>
@@ -36,19 +36,17 @@
                     <i id="number-of-facts"></i>
                 </div>
             </div>
-    
-            <div class="frame">
-                <h2>Pokemon types</h2>
-                <div id="types">
-                    <div id="types-container"></div>
-                </div>
-            </div>
 
             <div class="frame">
                 <h2>Encounters</h2>
                 <div id="encounters">
                     <div id="encounters-container"></div>
                 </div>
+            </div>
+
+            <div class="frame" id="types">
+                <h2>Pokemon types</h2>
+                <div id="types-container"></div>
             </div>
 
         </main>
