Update CSS and HTML files for consistency and improved user experience

--- a/facts.html
+++ b/facts.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/74e6607f1f.js" crossorigin="anonymous"></script>
         <script type="module" src="./js/facts.js"></script>
-        <title>PokemonWeb | PokeFact</title>
+        <title>PokémonWeb | PokéFact</title>
         <script> </script>
     </head>
     <body>
@@ -17,9 +17,9 @@
                 <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="facts.html" class="li-current">PokéFact</a></li>
-                    <li><a href="search.html">Find a pokemon</a></li>
+                    <li><a href="search.html">Find a pokémon</a></li>
                 </ul>
-                <h1>PokemonWeb</h1>
+                <h1>PokémonWeb</h1>
             </nav>
         </header>
 
@@ -45,7 +45,8 @@
             </div>
 
             <div class="frame" id="types">
-                <h2>Pokemon types</h2>
+                <h2>Pokémon types</h2>
+                <p id="types-comment">Click on a type to see all the pokemons of that type.</p>
                 <div id="types-container"></div>
             </div>
 
@@ -53,7 +54,7 @@
         
         <footer>
             <p>Created by <a href=#>Nicolina Smith</a></p>
-            <p>Pokemon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
+            <p>Pokémon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
         </footer>
     </body>
     </html>
