--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/74e6607f1f.js" crossorigin="anonymous"></script>
     <script type="module" src="./js/index.js"></script>
-    <title>PokemonWeb | Home</title>
+    <title>PokémonWeb | Home</title>
     <script> </script>
 </head>
 <body>
@@ -17,9 +17,9 @@
             <ul class="nav-list">
                 <li><a href="index.html" class="li-current">Home</a></li>
                 <li><a href="facts.html">PokéFact</a></li>
-                <li><a href="search.html">Find a pokemon</a></li>
+                <li><a href="search.html">Find a pokémon</a></li>
             </ul>
-            <h1>PokemonWeb</h1>
+            <h1>PokémonWeb</h1>
         </nav>
     </header>
 
@@ -31,7 +31,7 @@
 
     <footer>
         <p>Created by <a href=#>Nicolina Smith</a></p>
-        <p>Pokemon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
+        <p>Pokémon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
     </footer>
     
 </body>
