--- a/search.html
+++ b/search.html
@@ -38,7 +38,7 @@
 
     <footer>
         <p>Created by <a href=#>Nicolina Smith</a></p>
-        <p>Pokemon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
+        <p>Pokémon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
     </footer>
     
 </body>
