--- a/type.html
+++ b/type.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script type="module" src="./js/type.js"></script>
-    <title>PokemonWeb | Type</title>
+    <title>PokémonWeb | Type</title>
     <script> </script>
 </head>
 <body>
@@ -16,22 +16,20 @@
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="facts.html">PokéFact</a></li>
-                <li><a href="search.html">Find a pokemon</a></li>
+                <li><a href="search.html">Find a pokémon</a></li>
             </ul>
-            <h1>PokemonWeb</h1>
+            <h1>PokémonWeb</h1>
         </nav>
     </header>
 
-    <main id="type-detail-container">
-        <div class="frame">
+    <main id="type-detail-container" class="frame">
             <h2 id="type-header"></h2>
             <div id="pokemon-by-types"></div>
-        </div>
     </main>
 
     <footer>
         <p>Created by <a href=#>Nicolina Smith</a></p>
-        <p>Pokemon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
+        <p>Pokémon fact from <a href="https://pokeapi.co/">PokéAPI</a></p>
     </footer>
 
     
