Update Pokemon images and add comments

--- a/facts.html
+++ b/facts.html
@@ -46,7 +46,7 @@
 
             <div class="frame" id="types">
                 <h2>Pokémon types</h2>
-                <p id="types-comment">Click on a type to see all the pokemons of that type.</p>
+                <i id="types-comment"></i>
                 <div id="types-container"></div>
             </div>
 
