--- a/type.html
+++ b/type.html
@@ -24,6 +24,7 @@
 
     <main id="type-detail-container" class="frame">
             <h2 id="type-header"></h2>
+            <i id="type-comment"></i>
             <div id="pokemon-by-types"></div>
     </main>
 
