Update Pokémon image error handling

--- a/facts.html
+++ b/facts.html
@@ -24,9 +24,8 @@
         </header>
 
         <main id="pokemon-fact">
-
-            <div class="frame">
-                <div id="random-fact">
+            <div id="pokemon-fact-container">
+                <div id="random-fact" class="frame">
                     <h2>Did you know?</h2>
                     <div id="random-fact-container">
                         <i class="fa-solid fa-chevron-left" id="paging-fact-back"></i>
@@ -35,20 +34,20 @@
                     </div>
                     <i id="number-of-facts"></i>
                 </div>
+                <div class="frame" id="types">
+                    <h2>Pokémon types</h2>
+                    <i id="types-comment"></i>
+                    <div id="types-container"></div>
+                </div>
             </div>
-
-            <div class="frame">
+                
+            <div class="frame" id="encounter-fact-container">
                 <h2>Encounters</h2>
                 <div id="encounters">
                     <div id="encounters-container"></div>
                 </div>
             </div>
 
-            <div class="frame" id="types">
-                <h2>Pokémon types</h2>
-                <i id="types-comment"></i>
-                <div id="types-container"></div>
-            </div>
 
         </main>
         
